Correction orthographe mineure

--- a/_posts/2018-07-02-awk.md
+++ b/_posts/2018-07-02-awk.md
@@ -6,7 +6,7 @@ author: Olivier Bonaventure
 
 [awk](https://sites.uclouvain.be/SystInfo/manpages/man1/awk.1.html) 
 est un langage de manipulation de fichiers textes très flexible et très utile
-qui est intégré à toutes les versions de Unix. Plusieurs livres décrivent sont
+qui est intégré à toutes les versions de Unix. Plusieurs livres décrivent son
 fonctionnement en détails. Pour de nombreuses manipulations simples de fichiers
 texte, de bons exemples peuvent suffire à obtenir de très bons résultats. Le document
 [Handy One-Line scripts for AWK](http://www.pement.org/awk/awk1line.txt) maintenu
